@@ -72,4 +72,6 @@ GtkWidget *fb_image_new(gchar *iname, gchar *fname, int width, int height,
       gboolean keep_ratio);
 void menu_pos(GtkMenu *menu, gint *x, gint *y, gboolean *push_in, GtkWidget *widget);
 
+void configure();
+
 #endif
